# Heart-Communication-Device

./: CMakeLists.txt  clientTCP.c  clientTCP.h  cmake.sh  exe_servo_mosfet.c  heartrate.c  main.c  max30102_test.c  max_init.c  mosfetPeltierControl.c  moveServosAlongBPM.c  open_output.sh  picow_tcp_client.c  serverTCP.c  servo.c  servo.h  servoControl.c
Include/: clientTCP.h  exe_servo_mosfet.h  led.h  max30102.h  mosfet.h  serverTCP.h  servo.h
include/: clientTCP.h  exe_servo_mosfet.h  heartrate.h  max30102.h  max_init.h  mosfet.h  mosfetPeltierControl.h  moveServosAlongBPM.h  serverTCP.h  servoControl.h
src/: clientTCP.c  exe_servo_mosfet.c  led.c  main.c  max30102.c  mosfet.c  serverTCP.c  servo.c
